plugins {
    id 'java'
}

version 'unspecified'

repositories {
    mavenCentral()
    maven{ url 'https://www.jitpack.io' }
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile files("${System.getProperty('java.home')}/../lib/tools.jar")//non existent in java 9+
    compile 'org.projectlombok:lombok:1.18.14'
    compile group: 'com.google.googlejavaformat', name: 'google-java-format', version: '1.7'
    annotationProcessor 'org.projectlombok:lombok:1.18.14'

}
tasks.withType(JavaCompile){
    tasks.withType(JavaCompile){
        targetCompatibility = 8
        sourceCompatibility = 8
        if(JavaVersion.current() != JavaVersion.VERSION_1_8){
            options.compilerArgs.addAll(['--release', '8', '--enable-preview'])
        }

        doFirst{
            options.compilerArgs = options.compilerArgs.findAll{it != '--enable-preview' }
        }
    }

    tasks.withType(Javadoc){
        options{
            addStringOption('Xdoclint:none', '-quiet')
            addBooleanOption('-enable-preview', true)
            addStringOption('-release', '14')
        }
    }
}

tasks.withType(Javadoc){
    options.addStringOption('Xdoclint:none', '-quiet')
}